# canada-transit-mcpserver

./: .gitignore  Dockerfile  LICENSE  README.md  TECHNICAL_REFERENCE.md  docker-compose.yml  pyproject.toml
statcan_transit_mcp/: __init__.py  data_loader.py  http_server.py  server.py
