[project]
name = "statcan-transit-mcp"
version = "0.1.0"
description = "MCP Server for Statistics Canada Transit Data"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[project.scripts]
statcan-transit-mcp = "statcan_transit_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
